--- a/bio.html
+++ b/bio.html
@@ -11,7 +11,7 @@
 
     #header{
       width: 104%;
-      margin-left:-40px;
+      margin-left:-30px;
       margin-top:-10px;
       height: 50px;
       background-color: #ffffff;
@@ -48,6 +48,10 @@
               background-color: #999;
               border-radius: 0px
             }
+      p{
+        font-size: 1.3em
+      }
+
 
 #name{
   font-size: 2em;
@@ -76,8 +80,8 @@
 
     <div id="main">
 
-        <div style=" text-align: center;">
-          <img style= "width:200px;float:right;text-align:right;margin-right: 10px;" id="Portrait" src="Portrait_Picture.jpg" alt="Broken Image">
+        <div style=" text-align: center; margin-left: 10px; margin-right: 10px;">
+          <img style= "width:300px;float:right;text-align:right;margin-right: 10px; margin-left: 10px;" id="Portrait" src="Portrait_Picture.jpg" alt="Broken Image">
           <h1>About Me</h1>
           <p>Hello, my name is Zach and I am a student at babson college
           studying Business. I am origionally from Boulder, Colorado and love spending
