--- a/bio.html
+++ b/bio.html
@@ -83,11 +83,11 @@
         <div style=" text-align: center; margin-left: 10px; margin-right: 10px;">
           <img style= "width:300px;float:right;text-align:right;margin-right: 10px; margin-left: 10px;" id="Portrait" src="Portrait_Picture.jpg" alt="Broken Image">
           <h1>About Me</h1>
-          <p>Hello, my name is Zach and I am a student at babson college
+          <p>Hello, my name is Zach and I am a student at Babson College
           studying Business. I am origionally from Boulder, Colorado and love spending
           time in the mountains skiing, mountain biking, camping, rock climbing, or what
-          ever will allow my to spend some time outside. </p>
-          <p>Beyond studying business at Babson I am currently member of Babson's Varsity
+          ever will allow my to get outside. </p>
+          <p>Beyond studying business at Babson I am currently a member of Babson's Varsity
           Alpine Ski Team, and a member of Babson Sports Business Socioty. While at school
           I have been able to build on my love for strategy, and take courses involving
           strategic problem solving. Through this I have found interest in gaining more
