--- a/bio.html
+++ b/bio.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;1,300&family=Mulish:wght@400;700;800&display=swap" rel="stylesheet">
-    <title>Zach Carpenter's Resume</title>
+    <title>About Zach Carpenter</title>
     <style>
     body{
       background: #80D1F0;
